--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,15 @@
 
 body{
     background-color: lightslategray;
+    align:center;
 }
 .inputform{
     text-align: right;
+}
+.hometitle{
+    text-align: center;
+}
+
+.picture{
+    align-content: center;
 }
